2004-09-08  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-rect.el (cua--highlight-rectangle): Fix last
	change.  Use zero width overlays when necessary.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* subr.el (split-string): Docfix.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-generate-call-tree): Doc fix.
	(display-call-tree): Ensure newline after caller/calls blocks.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* startup.el (command-line-1): Make option
	--directory/-L modify `load-path' straight away.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* progmodes/grep.el (grep-mode): Use normal autoload cookie.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* emacs-lisp/autoload.el (make-autoload):
	Handle `define-compilation-mode'.

	* emacs-lisp/lisp-mode.el (define-compilation-mode):
	Specify `doc-string-elt' property.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* bs.el (bs-mode): Doc fix.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* info.el (Info-insert-dir): Fix temp buffer leak bug.

2004-09-08  Thien-Thi Nguyen  <ttn@gnu.org>

	* play/blackbox.el (bb-trace-ray): Avoid double tracing.

2004-09-08  Kenichi Handa  <handa@m17n.org>

	* ps-mule.el: Fix old function calls (ps-mule-chars-in-string ->
	length, ps-mule-string-char -> aref, ps-mule-next-index -> 1+,
	ps-mule-next-point -> 1+).

	* composite.el (encode-composition-rule): Add autoload cooky.

2004-09-07  Luc Teirlinck  <teirllm@auburn.edu>

	* format.el (buffer-auto-save-file-format): Make it permanent local.

2004-09-07  Kim F. Storm  <storm@cua.dk>

	* emacs-lisp/authors.el (authors-aliases): Add more aliases.
	(authors-fixed-entries): Fix typo.
	(authors-canonical-author-name): Compact multiple spaces.
	Ignore trivial names (e.g. only first name).

	* term.el (term-window-width): Only use full window width on
	window system if overflow-newline-into-fringe is enabled.
	(term-mode): Don't disable overflow-newline-into-fringe.
